--- a/src/main/resources/templates/adminPage.html
+++ b/src/main/resources/templates/adminPage.html
@@ -3,7 +3,7 @@
 	xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
 <meta charset="UTF-8">
-<title>Admin Page</title>
+<title>AdminPage</title>
 </head>
 <body>
 	<h1>Admin Page</h1>
@@ -14,23 +14,27 @@
 		</tr>
 		<tr>
 			<td>UserName</td>
-			<td><span sec:suthentication="principal.username"></span></td>
+			<td><span sec:authentication="principal.username"></span></td>
+			<!-- ユーザ名を表示 -->
 		</tr>
 		<tr>
 			<td>Name</td>
 			<td><span sec:authentication="principal.name"></span></td>
+			<!-- 名前を表示 -->
 		</tr>
 		<tr>
 			<td>Role</td>
 			<td><span sec:authentication="principal.authorities"></span></td>
+			<!-- Roleを表示 -->
 		</tr>
 	</table>
+
 	<form method="get" th:action="@{/home}">
 		<input type="submit" value="Homeへ">
 	</form>
-	<form method="get" th:action="@{/logout}">
+
+	<form method="post" th:action="@{/logout}">
 		<input type="submit" value="ログアウト">
 	</form>
-
 </body>
 </html>
