--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,12 +7,15 @@
 </head>
 <body>
 	<h1>Home</h1>
+
 	<form method="get" th:action="@{/adminPage}">
-		<input type="submit" value="Adminpegeへ">
+		<input type="submit" value="AdminPageへ">
 	</form>
+
 	<form method="get" th:action="@{/userPage}">
-		<input type="submit" value="Userpegeへ">
+		<input type="submit" value="UserPageへ">
 	</form>
+
 	<form method="post" th:action="@{/logout}">
 		<input type="submit" value="ログアウト">
 	</form>
