--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,14 +7,22 @@
 </head>
 <body>
 	<h1>ログイン</h1>
-	<div th:="${param.error}">
-		<div>UserNameまたは、passwordが違います。</div>
+	<div th:if="${param.error}">
+		<!-- リクエストパラメータの判定 -->
+		<div>
+			UserNameまたは、Passwordが違います。
+			<!-- 認証エラーメッセージ -->
+		</div>
 	</div>
 	<form method="post" th:action="@{/authenticate}">
+		<!-- ログイン処理のパスを指定  -->
 		<label>UserName:</label> <input type="text" id="userName"
-			name="userName"> <br> <label>Password:</label> <input
-			type="password" id="password" name="password"> <br> <input
-			type="submit" id="submit" value="ログイン">
+			name="userName">
+		<!-- ユーザ名の入力部 -->
+		<br> <label>Password:</label> <input type="password"
+			id="password" name="password">
+		<!-- パスワードの入力部 -->
+		<br> <input type="submit" id="submit" value="ログイン">
 	</form>
 </body>
 </html>
