--- a/src/main/resources/templates/userPage.html
+++ b/src/main/resources/templates/userPage.html
@@ -6,15 +6,15 @@
 <title>UserPage</title>
 </head>
 <body>
-<h1>User Page</h1>
-<table border="1">
+	<h1>User Page</h1>
+	<table border="1">
 		<tr>
 			<th>項目</th>
 			<th>内容</th>
 		</tr>
 		<tr>
 			<td>UserName</td>
-			<td><span sec:suthentication="principal.username"></span></td>
+			<td><span sec:authentication="principal.username"></span></td>
 		</tr>
 		<tr>
 			<td>Name</td>
@@ -25,10 +25,12 @@
 			<td><span sec:authentication="principal.authorities"></span></td>
 		</tr>
 	</table>
+
 	<form method="get" th:action="@{/home}">
 		<input type="submit" value="Homeへ">
 	</form>
-	<form method="get" th:action="@{/logout}">
+
+	<form method="post" th:action="@{/logout}">
 		<input type="submit" value="ログアウト">
 	</form>
 </body>
