--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,15 +7,16 @@
 </head>
 <body>
 	<h1>Home</h1>
-
+<div sec:authorize="hasRole('ADMIN')">
 	<form method="get" th:action="@{/adminPage}">
 		<input type="submit" value="AdminPageへ">
 	</form>
-
+</div>
+<div sec:authorize="hasRole('USER')">
 	<form method="get" th:action="@{/userPage}">
 		<input type="submit" value="UserPageへ">
 	</form>
-
+</div>
 	<form method="post" th:action="@{/logout}">
 		<input type="submit" value="ログアウト">
 	</form>
